# event-sourcing

./: .gitignore  Cargo.toml  README.md  build.sh  test.sh
bank_account/: Cargo.toml  build.rs  final_composed_bank_account.wasm  http_with_event_sourcer.wasm  http_with_event_sourcer_aggregate_and_fs_store.wasm  http_with_event_sourcer_and_aggregate.wasm
bank_account/aggregate/: Cargo.toml
bank_account/aggregate/proto/: bank.proto
bank_account/aggregate/src/: lib.rs
bank_account/command_handler/: Cargo.toml  build.rs
bank_account/command_handler/src/: bindings.rs  lib.rs  types.rs
bank_account/command_handler/wit/: world.wit
bank_account/src/: lib.rs
bank_account/tests/: bank_account_test.rs
event_sourcer/: Cargo.toml
event_sourcer/src/: lib.rs
filesystem_event_store/: Cargo.toml
filesystem_event_store/src/: lib.rs
http_api_gateway/: Cargo.toml
http_api_gateway/src/: lib.rs
wit/: world.wit
