[workspace]
members = [
    "http_api_gateway",
    "bank_account/aggregate",
    "eshop_aggregate",
    "event_sourcer",
    "filesystem_event_store",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.98"
wit-bindgen = "0.43.0"
wasi = "0.13.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
